// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Personal Data Form Container should render Default 1`] = `
<DocumentFragment>
  <form
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <div
            class="emotion-8 emotion-9"
          >
            <img
              alt="DSC07717"
              class="emotion-10 emotion-11"
              loading="lazy"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
              srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
              title=""
            />
            <input
              accept="image/*"
              class="emotion-12"
              id=":r0:"
              type="file"
            />
          </div>
          <div
            class="emotion-13 emotion-14"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorError MuiIconButton-sizeMedium emotion-15"
              tabindex="0"
              title="Bild löschen"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-16"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium emotion-17"
              tabindex="0"
              title="Neues Bild hochladen"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-16"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="emotion-19 emotion-20"
      >
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r1:"
            id=":r1:-label"
          >
            Vorname
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              autocomplete="firstname"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r1:"
              name="firstName"
              type="text"
              value="Kamil"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Vorname
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-28"
            data-shrink="false"
            for=":r2:"
            id=":r2:-label"
          >
            Bevorzugter Name
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r2:"
              name="preferredName"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-32"
              >
                <span>
                  Bevorzugter Name
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r3:"
            id=":r3:-label"
          >
            Funktion / Beruf
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r3:"
              name="flair"
              type="text"
              value="Financial Advisor & CEO"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Funktion / Beruf
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r4:"
            id=":r4:-label"
          >
            Nachname
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              autocomplete="lastname"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r4:"
              name="name"
              type="text"
              value="Wasyl"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Nachname
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="emotion-45 emotion-46"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-47"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r5:"
              id=":r5:-label"
            >
              Strasse und Hausnummer
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-49"
            >
              <input
                aria-invalid="false"
                autocomplete="address"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r5:"
                name="address.streetAddress"
                type="text"
                value="Cool Street"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    Strasse und Hausnummer
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-53"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r6:"
              id=":r6:-label"
            >
              PLZ
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-49"
            >
              <input
                aria-invalid="false"
                autocomplete="zip"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r6:"
                name="address.zipCode"
                type="text"
                value="12345"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    PLZ
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-53"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r7:"
              id=":r7:-label"
            >
              Ort / Stadt
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-49"
            >
              <input
                aria-invalid="false"
                autocomplete="city"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r7:"
                name="address.city"
                type="text"
                value="Surfers Paradise"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    Ort / Stadt
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon emotion-65"
            name="address.country"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-53"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-28"
                data-shrink="false"
                for=":r8:"
                id=":r8:-label"
              >
                Land
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot emotion-68"
              >
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-invalid="false"
                  autocapitalize="none"
                  autocomplete="nothing"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused emotion-69"
                  id=":r8:"
                  role="combobox"
                  spellcheck="false"
                  type="text"
                  value=""
                />
                <div
                  class="MuiAutocomplete-endAdornment emotion-70"
                >
                  <button
                    aria-label="Open"
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator emotion-71"
                    tabindex="-1"
                    title="Open"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-72"
                      data-testid="ArrowDropDownIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root emotion-16"
                    />
                  </button>
                </div>
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline emotion-25"
                >
                  <legend
                    class="emotion-32"
                  >
                    <span>
                      Land
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-76 emotion-77"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-78"
        >
          Nur ausfüllen, wenn Sie das Passwort ändern möchten. Ansonsten leer lassen.
        </p>
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-53"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-28"
            data-shrink="false"
            for=":ra:"
            id=":ra:-label"
          >
            Passwort
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd emotion-68"
          >
            <input
              aria-invalid="false"
              autocomplete="new-password"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd emotion-69"
              id=":ra:"
              name="password"
              type="password"
              value=""
            />
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-83"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-84"
                tabindex="0"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root emotion-16"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-32"
              >
                <span>
                  Passwort
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-53"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-28"
            data-shrink="false"
            for=":rb:"
            id=":rb:-label"
          >
            Passwort wiederholen
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd emotion-68"
          >
            <input
              aria-invalid="false"
              autocomplete="new-password"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd emotion-69"
              id=":rb:"
              name="passwordRepeated"
              type="password"
              value=""
            />
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-83"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-84"
                tabindex="0"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root emotion-16"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-32"
              >
                <span>
                  Passwort wiederholen
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="emotion-97 emotion-98"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-53"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-disabled MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":rc:"
            id=":rc:-label"
          >
            Email (nicht bearbeitbar)
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl emotion-49"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled emotion-24"
              disabled=""
              id=":rc:"
              name="email"
              type="email"
              value="some-example@mail.com"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Email (nicht bearbeitbar)
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary emotion-105"
      tabindex="0"
      type="submit"
    >
      Save
      <span
        class="MuiTouchRipple-root emotion-16"
      />
    </button>
  </form>
</DocumentFragment>
`;

exports[`Personal Data Form Container should render DeleteImage 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -619,10 +619,157 @@
              </fieldset>
            </div>
          </div>
        </div>
      </div>
+     <div
+       class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorError MuiAlert-standardError MuiAlert-standard css-1iznk5b-MuiPaper-root-MuiAlert-root"
+       role="alert"
+     >
+       <div
+         class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
+       >
+         <svg
+           aria-hidden="true"
+           class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
+           data-testid="ErrorOutlineIcon"
+           focusable="false"
+           viewBox="0 0 24 24"
+         >
+           <path
+             d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
+           />
+         </svg>
+       </div>
+       <div
+         class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
+       >
+         No more mocked responses for the query: mutation UploadImage($uploadImageInput: UploadImageInput) {
+   uploadUserProfileImage(uploadImageInput: $uploadImageInput) {
+     ...FullUser
+     __typename
+   }
+ }
+
+ fragment FullUser on User {
+   id
+   name
+   firstName
+   preferredName
+   flair
+   birthday
+   email
+   address {
+     ...FullAddress
+     __typename
+   }
+   paymentProviderCustomers {
+     ...FullPaymentProviderCustomer
+     __typename
+   }
+   oauth2Accounts {
+     ...FullOAuth2Account
+     __typename
+   }
+   image {
+     ...FullImage
+     __typename
+   }
+   properties {
+     ...FullProperty
+     __typename
+   }
+   __typename
+ }
+
+ fragment FullAddress on UserAddress {
+   company
+   streetAddress
+   streetAddress2
+   zipCode
+   city
+   country
+   __typename
+ }
+
+ fragment FullPaymentProviderCustomer on PaymentProviderCustomer {
+   paymentProviderID
+   customerID
+   __typename
+ }
+
+ fragment FullOAuth2Account on OAuth2Account {
+   type
+   provider
+   scope
+   __typename
+ }
+
+ fragment FullImage on Image {
+   id
+   createdAt
+   modifiedAt
+   filename
+   format
+   mimeType
+   extension
+   width
+   height
+   fileSize
+   title
+   description
+   tags
+   source
+   link
+   license
+   focalPoint {
+     x
+     y
+     __typename
+   }
+   ...ImageURLs
+   __typename
+ }
+
+ fragment ImageURLs on Image {
+   url
+   xl: transformURL(input: {width: 1200, output: PNG, quality: 0.8})
+   l: transformURL(input: {width: 1000, output: PNG, quality: 0.8})
+   m: transformURL(input: {width: 800, output: PNG, quality: 0.8})
+   s: transformURL(input: {width: 500, output: PNG, quality: 0.8})
+   xs: transformURL(input: {width: 300, output: PNG, quality: 0.8})
+   xxs: transformURL(input: {width: 200, output: PNG, quality: 0.8})
+   xlSquare: transformURL(
+     input: {width: 1200, height: 1200, output: PNG, quality: 0.8}
+   )
+   lSquare: transformURL(
+     input: {width: 1000, height: 1000, output: PNG, quality: 0.8}
+   )
+   mSquare: transformURL(
+     input: {width: 800, height: 800, output: PNG, quality: 0.8}
+   )
+   sSquare: transformURL(
+     input: {width: 500, height: 500, output: PNG, quality: 0.8}
+   )
+   xsSquare: transformURL(
+     input: {width: 300, height: 300, output: PNG, quality: 0.8}
+   )
+   xxsSquare: transformURL(
+     input: {width: 200, height: 200, output: PNG, quality: 0.8}
+   )
+   __typename
+ }
+
+ fragment FullProperty on PublicProperties {
+   key
+   value
+   __typename
+ }
+ Expected variables: {"uploadImageInput":null}
+
+       </div>
+     </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-13uldyx-MuiButtonBase-root-MuiButton-root-PersonalDataForm"
        tabindex="0"
        type="submit"
      >"
`;

exports[`Personal Data Form Container should render Filled 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -121,11 +121,11 @@
                autocomplete="firstname"
                class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":rr:"
                name="firstName"
                type="text"
-               value="Kamil"
+               value="KamilFoo"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
@@ -230,11 +230,11 @@
                autocomplete="lastname"
                class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":ru:"
                name="name"
                type="text"
-               value="Wasyl"
+               value="WasylBar"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
@@ -270,11 +270,11 @@
                  autocomplete="address"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":rv:"
                  name="address.streetAddress"
                  type="text"
-                 value="Cool Street"
+                 value="Cool StreetMusterstrasse 1"
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
@@ -307,11 +307,11 @@
                  autocomplete="zip"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":r10:"
                  name="address.zipCode"
                  type="text"
-                 value="12345"
+                 value="123458047"
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
@@ -344,11 +344,11 @@
                  autocomplete="city"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":r11:"
                  name="address.city"
                  type="text"
-                 value="Surfers Paradise"
+                 value="Surfers ParadiseZürich"
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
@@ -361,43 +361,81 @@
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
-             class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-cb07vo-MuiAutocomplete-root"
+             class="MuiAutocomplete-root MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon css-cb07vo-MuiAutocomplete-root"
              name="address.country"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
              >
                <label
-                 class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-gv8x57-MuiFormLabel-root-MuiInputLabel-root"
-                 data-shrink="false"
+                 class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-1oxf4qp-MuiFormLabel-root-MuiInputLabel-root"
+                 data-shrink="true"
                  for=":r12:"
                  id=":r12:-label"
                >
                  Land
                </label>
+               <div
+                 class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-fv07na-MuiInputBase-root-MuiOutlinedInput-root"
+               >
                  <div
-                 class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-1y6ah8l-MuiInputBase-root-MuiOutlinedInput-root"
+                   class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-16su6c8-MuiInputAdornment-root"
+                 >
+                   <span
+                     class="notranslate"
                    >
+                     ​
+                   </span>
+                   <img
+                     alt="Schweiz"
+                     loading="lazy"
+                     src="https://flagcdn.com/w20/ch.webp"
+                     srcset="https://flagcdn.com/w40/ch.webp 2x"
+                     width="20"
+                   />
+                 </div>
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-invalid="false"
                    autocapitalize="none"
                    autocomplete="nothing"
-                   class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
+                   class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-152mnda-MuiInputBase-input-MuiOutlinedInput-input"
                    id=":r12:"
                    role="combobox"
                    spellcheck="false"
                    type="text"
-                   value=""
+                   value="Schweiz"
                  />
                  <div
                    class="MuiAutocomplete-endAdornment css-p1olib-MuiAutocomplete-endAdornment"
+                 >
+                   <button
+                     aria-label="Clear"
+                     class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-clearIndicator css-1glvl0p-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-clearIndicator"
+                     tabindex="-1"
+                     title="Clear"
+                     type="button"
                    >
+                     <svg
+                       aria-hidden="true"
+                       class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
+                       data-testid="CloseIcon"
+                       focusable="false"
+                       viewBox="0 0 24 24"
+                     >
+                       <path
+                         d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
+                       />
+                     </svg>
+                     <span
+                       class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+                     />
+                   </button>
                    <button
                      aria-label="Open"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-qzbt6i-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator"
                      tabindex="-1"
                      title="Open"
@@ -422,11 +460,11 @@
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
-                     class="css-yjsfm1"
+                     class="css-14lo706"
                    >
                      <span>
                        Land
                      </span>
                    </legend>
@@ -446,12 +484,12 @@
          </p>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
          >
            <label
-             class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-gv8x57-MuiFormLabel-root-MuiInputLabel-root"
-             data-shrink="false"
+             class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-1oxf4qp-MuiFormLabel-root-MuiInputLabel-root"
+             data-shrink="true"
              for=":r14:"
              id=":r14:-label"
            >
              Passwort
            </label>
@@ -463,11 +501,11 @@
                autocomplete="new-password"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r14:"
                name="password"
                type="password"
-               value=""
+               value="12345678"
              />
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1om5its-MuiInputAdornment-root"
              >
                <button
@@ -500,11 +538,11 @@
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
-                 class="css-yjsfm1"
+                 class="css-14lo706"
                >
                  <span>
                    Passwort
                  </span>
                </legend>
@@ -513,12 +551,12 @@
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
          >
            <label
-             class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-gv8x57-MuiFormLabel-root-MuiInputLabel-root"
-             data-shrink="false"
+             class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-1oxf4qp-MuiFormLabel-root-MuiInputLabel-root"
+             data-shrink="true"
              for=":r15:"
              id=":r15:-label"
            >
              Passwort wiederholen
            </label>
@@ -530,11 +568,11 @@
                autocomplete="new-password"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r15:"
                name="passwordRepeated"
                type="password"
-               value=""
+               value="12345678"
              />
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1om5its-MuiInputAdornment-root"
              >
                <button
@@ -567,11 +605,11 @@
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
-                 class="css-yjsfm1"
+                 class="css-14lo706"
                >
                  <span>
                    Passwort wiederholen
                  </span>
                </legend>"
`;

exports[`Personal Data Form Container should render WithClassName 1`] = `
<DocumentFragment>
  <form
    class="extra-classname emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <div
            class="emotion-8 emotion-9"
          >
            <img
              alt="DSC07717"
              class="emotion-10 emotion-11"
              loading="lazy"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
              srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
              title=""
            />
            <input
              accept="image/*"
              class="emotion-12"
              id=":r17:"
              type="file"
            />
          </div>
          <div
            class="emotion-13 emotion-14"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorError MuiIconButton-sizeMedium emotion-15"
              tabindex="0"
              title="Bild löschen"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-16"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium emotion-17"
              tabindex="0"
              title="Neues Bild hochladen"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-16"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="emotion-19 emotion-20"
      >
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r18:"
            id=":r18:-label"
          >
            Vorname
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              autocomplete="firstname"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r18:"
              name="firstName"
              type="text"
              value="Kamil"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Vorname
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-28"
            data-shrink="false"
            for=":r19:"
            id=":r19:-label"
          >
            Bevorzugter Name
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r19:"
              name="preferredName"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-32"
              >
                <span>
                  Bevorzugter Name
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r1a:"
            id=":r1a:-label"
          >
            Funktion / Beruf
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r1a:"
              name="flair"
              type="text"
              value="Financial Advisor & CEO"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Funktion / Beruf
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r1b:"
            id=":r1b:-label"
          >
            Nachname
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              autocomplete="lastname"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r1b:"
              name="name"
              type="text"
              value="Wasyl"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Nachname
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="emotion-45 emotion-46"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-47"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r1c:"
              id=":r1c:-label"
            >
              Strasse und Hausnummer
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-49"
            >
              <input
                aria-invalid="false"
                autocomplete="address"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r1c:"
                name="address.streetAddress"
                type="text"
                value="Cool Street"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    Strasse und Hausnummer
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-53"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r1d:"
              id=":r1d:-label"
            >
              PLZ
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-49"
            >
              <input
                aria-invalid="false"
                autocomplete="zip"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r1d:"
                name="address.zipCode"
                type="text"
                value="12345"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    PLZ
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-53"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r1e:"
              id=":r1e:-label"
            >
              Ort / Stadt
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-49"
            >
              <input
                aria-invalid="false"
                autocomplete="city"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r1e:"
                name="address.city"
                type="text"
                value="Surfers Paradise"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    Ort / Stadt
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon emotion-65"
            name="address.country"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-53"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-28"
                data-shrink="false"
                for=":r1f:"
                id=":r1f:-label"
              >
                Land
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot emotion-68"
              >
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-invalid="false"
                  autocapitalize="none"
                  autocomplete="nothing"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused emotion-69"
                  id=":r1f:"
                  role="combobox"
                  spellcheck="false"
                  type="text"
                  value=""
                />
                <div
                  class="MuiAutocomplete-endAdornment emotion-70"
                >
                  <button
                    aria-label="Open"
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator emotion-71"
                    tabindex="-1"
                    title="Open"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-72"
                      data-testid="ArrowDropDownIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root emotion-16"
                    />
                  </button>
                </div>
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline emotion-25"
                >
                  <legend
                    class="emotion-32"
                  >
                    <span>
                      Land
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-76 emotion-77"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-78"
        >
          Nur ausfüllen, wenn Sie das Passwort ändern möchten. Ansonsten leer lassen.
        </p>
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-53"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-28"
            data-shrink="false"
            for=":r1h:"
            id=":r1h:-label"
          >
            Passwort
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd emotion-68"
          >
            <input
              aria-invalid="false"
              autocomplete="new-password"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd emotion-69"
              id=":r1h:"
              name="password"
              type="password"
              value=""
            />
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-83"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-84"
                tabindex="0"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root emotion-16"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-32"
              >
                <span>
                  Passwort
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-53"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-28"
            data-shrink="false"
            for=":r1i:"
            id=":r1i:-label"
          >
            Passwort wiederholen
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd emotion-68"
          >
            <input
              aria-invalid="false"
              autocomplete="new-password"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd emotion-69"
              id=":r1i:"
              name="passwordRepeated"
              type="password"
              value=""
            />
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-83"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-84"
                tabindex="0"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root emotion-16"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-32"
              >
                <span>
                  Passwort wiederholen
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="emotion-97 emotion-98"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-53"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-disabled MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r1j:"
            id=":r1j:-label"
          >
            Email (nicht bearbeitbar)
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl emotion-49"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled emotion-24"
              disabled=""
              id=":r1j:"
              name="email"
              type="email"
              value="some-example@mail.com"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Email (nicht bearbeitbar)
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary emotion-105"
      tabindex="0"
      type="submit"
    >
      Save
      <span
        class="MuiTouchRipple-root emotion-16"
      />
    </button>
  </form>
</DocumentFragment>
`;

exports[`Personal Data Form Container should render WithEmotion 1`] = `
<DocumentFragment>
  <form
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <div
            class="emotion-8 emotion-9"
          >
            <img
              alt="DSC07717"
              class="emotion-10 emotion-11"
              loading="lazy"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
              srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
              title=""
            />
            <input
              accept="image/*"
              class="emotion-12"
              id=":r1k:"
              type="file"
            />
          </div>
          <div
            class="emotion-13 emotion-14"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorError MuiIconButton-sizeMedium emotion-15"
              tabindex="0"
              title="Bild löschen"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-16"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium emotion-17"
              tabindex="0"
              title="Neues Bild hochladen"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-16"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="emotion-19 emotion-20"
      >
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r1l:"
            id=":r1l:-label"
          >
            Vorname
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              autocomplete="firstname"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r1l:"
              name="firstName"
              type="text"
              value="Kamil"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Vorname
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-28"
            data-shrink="false"
            for=":r1m:"
            id=":r1m:-label"
          >
            Bevorzugter Name
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r1m:"
              name="preferredName"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-32"
              >
                <span>
                  Bevorzugter Name
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r1n:"
            id=":r1n:-label"
          >
            Funktion / Beruf
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r1n:"
              name="flair"
              type="text"
              value="Financial Advisor & CEO"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Funktion / Beruf
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r1o:"
            id=":r1o:-label"
          >
            Nachname
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              autocomplete="lastname"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r1o:"
              name="name"
              type="text"
              value="Wasyl"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Nachname
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="emotion-45 emotion-46"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-47"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r1p:"
              id=":r1p:-label"
            >
              Strasse und Hausnummer
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-49"
            >
              <input
                aria-invalid="false"
                autocomplete="address"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r1p:"
                name="address.streetAddress"
                type="text"
                value="Cool Street"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    Strasse und Hausnummer
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-53"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r1q:"
              id=":r1q:-label"
            >
              PLZ
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-49"
            >
              <input
                aria-invalid="false"
                autocomplete="zip"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r1q:"
                name="address.zipCode"
                type="text"
                value="12345"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    PLZ
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-53"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r1r:"
              id=":r1r:-label"
            >
              Ort / Stadt
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-49"
            >
              <input
                aria-invalid="false"
                autocomplete="city"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r1r:"
                name="address.city"
                type="text"
                value="Surfers Paradise"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    Ort / Stadt
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon emotion-65"
            name="address.country"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-53"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-28"
                data-shrink="false"
                for=":r1s:"
                id=":r1s:-label"
              >
                Land
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot emotion-68"
              >
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-invalid="false"
                  autocapitalize="none"
                  autocomplete="nothing"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused emotion-69"
                  id=":r1s:"
                  role="combobox"
                  spellcheck="false"
                  type="text"
                  value=""
                />
                <div
                  class="MuiAutocomplete-endAdornment emotion-70"
                >
                  <button
                    aria-label="Open"
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator emotion-71"
                    tabindex="-1"
                    title="Open"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-72"
                      data-testid="ArrowDropDownIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root emotion-16"
                    />
                  </button>
                </div>
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline emotion-25"
                >
                  <legend
                    class="emotion-32"
                  >
                    <span>
                      Land
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-76 emotion-77"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-78"
        >
          Nur ausfüllen, wenn Sie das Passwort ändern möchten. Ansonsten leer lassen.
        </p>
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-53"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-28"
            data-shrink="false"
            for=":r1u:"
            id=":r1u:-label"
          >
            Passwort
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd emotion-68"
          >
            <input
              aria-invalid="false"
              autocomplete="new-password"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd emotion-69"
              id=":r1u:"
              name="password"
              type="password"
              value=""
            />
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-83"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-84"
                tabindex="0"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root emotion-16"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-32"
              >
                <span>
                  Passwort
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-53"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-28"
            data-shrink="false"
            for=":r1v:"
            id=":r1v:-label"
          >
            Passwort wiederholen
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd emotion-68"
          >
            <input
              aria-invalid="false"
              autocomplete="new-password"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd emotion-69"
              id=":r1v:"
              name="passwordRepeated"
              type="password"
              value=""
            />
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-83"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-84"
                tabindex="0"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root emotion-16"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-32"
              >
                <span>
                  Passwort wiederholen
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="emotion-97 emotion-98"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-53"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-disabled MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r20:"
            id=":r20:-label"
          >
            Email (nicht bearbeitbar)
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl emotion-49"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled emotion-24"
              disabled=""
              id=":r20:"
              name="email"
              type="email"
              value="some-example@mail.com"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Email (nicht bearbeitbar)
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary emotion-105"
      tabindex="0"
      type="submit"
    >
      Save
      <span
        class="MuiTouchRipple-root emotion-16"
      />
    </button>
  </form>
</DocumentFragment>
`;
